<resources>
    <string name="app_name">RASP</string>
    <string name="loading">Loading</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="spot_count">Number of Spots</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="google_maps_key">AIzaSyDY3dFbLeLKPuMrX1sEq1m9WUMZ0jG7qKw</string>
    <string name="google_places_key">AIzaSyAZ4rArA8lzdaZ_E2ZVpGrQrQRPySuz-VI</string>
    <string name="done">Done</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="search">Search</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="pick_address">Select Address</string>
    <string name="name">Name</string>
    <string name="driver_registration">Driver Registration</string>
    <string name="owner_registration">Owner Registration</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
